tests/conformance/positive/06-nested-two-levels.sml
<!-- Nested skills (2 levels) -->
<skill interface="code-review">
  <skill interface="lint" language="python">
    def calculate(x, y):
        return x + y
  </skill>
  Focus on maintainability and readability.
</skill>
